--- a/retirement_simulation.ipynb
+++ b/retirement_simulation.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "id": "53dc4c3a",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,7 @@
     "\n",
     "import series.base_series as base_series\n",
     "from series.consumption import StaticRetirementConsumption\n",
+    "from series.ssb import StaticRetirementSSB\n",
     "from series.deferral import StaticPreRetirementDeferral"
    ]
   },
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "id": "a6f315ed-5ef7-4b8a-a5d4-805c736cce22",
    "metadata": {},
    "outputs": [],
@@ -74,6 +75,7 @@
     "initial_deferral = 19500\n",
     "retirement_age = 60\n",
     "retirement_consumption = 75000\n",
+    "retirement_ssb = 10000\n",
     "death_age = 100"
    ]
   },
@@ -198,6 +200,74 @@
    "outputs": [],
    "source": [
     "deferral = StaticPreRetirementDeferral(initial_deferral, cpi, initial_age, retirement_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c4d5639d-4705-4354-a731-805f40db58d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssb = StaticRetirementSSB(retirement_ssb, cpi, initial_age, retirement_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ac6fdeb8-aa18-4df7-9379-63dbc48e368a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpi.step_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "8de32fa2-8386-4625-894c-b5e80205678c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssb.step_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "aa539aa1-989a-452d-98a1-f72eb2f19626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        , 18103.23065018, 18525.03774025,\n",
+       "       19029.89161664, 19357.13728913, 19742.84792134, 20170.78892552,\n",
+       "       20351.93897739, 20788.80355997, 21279.75626561, 21783.1856878 ,\n",
+       "       22330.5639352 , 22923.88482579, 23501.14134978, 23960.62195509,\n",
+       "       24446.54440847, 24956.49965411, 25569.61533169, 25892.45194378,\n",
+       "       26670.38551788, 26919.0713137 , 27511.85497803, 27827.06937104,\n",
+       "       28349.8037285 , 28818.51460296, 29480.34422413, 30051.85503652,\n",
+       "       30572.59834918, 31199.8439497 , 31748.72647321, 32456.57355896,\n",
+       "       33318.1235827 , 34216.96648813, 34867.29766708, 35443.67173831,\n",
+       "       36004.00526673, 36833.09505528, 37379.73838658, 37986.89618022,\n",
+       "       38755.96235375, 39608.73379895, 40212.46115626])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssb.history"
    ]
   },
   {
