Add validation for RetirementAnalysis inputs, fix portfolio.step bug.

--- a/retirement_simulation.ipynb
+++ b/retirement_simulation.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "id": "2074cfe7-bae2-48e6-82cf-b013152d3bbc",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
    "id": "b06c9dfb-4a08-4951-b7a6-da258a4ba0a7",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "id": "1e32eebd-c4ed-4c5b-b1e3-f7e0e26b314d",
    "metadata": {},
    "outputs": [],
@@ -156,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "id": "3c00f700-db41-455f-8076-7d97b1d67f83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "inflation_scenario = base_series.StaticSeries(num_years, geo_mean_inflation)"
+    "inflation = base_series.StaticSeries(num_years, geo_mean_inflation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "id": "0ba18a7a-3f01-450a-ac48-f4ac18b95051",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 105,
    "id": "fb0d6b90-c298-4c18-947b-7fc16cac2940",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 106,
    "id": "8a81c0be-c20e-4405-870d-ebf4b757a290",
    "metadata": {},
    "outputs": [],
@@ -204,70 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "id": "c4d5639d-4705-4354-a731-805f40db58d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "ssb = StaticRetirementSSB(retirement_ssb, cpi, initial_age, retirement_age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "ac6fdeb8-aa18-4df7-9379-63dbc48e368a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cpi.step_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "8de32fa2-8386-4625-894c-b5e80205678c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssb.step_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "aa539aa1-989a-452d-98a1-f72eb2f19626",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([    0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
-       "           0.        ,     0.        , 18103.23065018, 18525.03774025,\n",
-       "       19029.89161664, 19357.13728913, 19742.84792134, 20170.78892552,\n",
-       "       20351.93897739, 20788.80355997, 21279.75626561, 21783.1856878 ,\n",
-       "       22330.5639352 , 22923.88482579, 23501.14134978, 23960.62195509,\n",
-       "       24446.54440847, 24956.49965411, 25569.61533169, 25892.45194378,\n",
-       "       26670.38551788, 26919.0713137 , 27511.85497803, 27827.06937104,\n",
-       "       28349.8037285 , 28818.51460296, 29480.34422413, 30051.85503652,\n",
-       "       30572.59834918, 31199.8439497 , 31748.72647321, 32456.57355896,\n",
-       "       33318.1235827 , 34216.96648813, 34867.29766708, 35443.67173831,\n",
-       "       36004.00526673, 36833.09505528, 37379.73838658, 37986.89618022,\n",
-       "       38755.96235375, 39608.73379895, 40212.46115626])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssb.history"
    ]
   },
   {
@@ -280,22 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "id": "046d8b4e-ae8c-4057-827a-6648166ef130",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'deferral_scenario' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/xn/1p56zln925s55jw7cg4p0my40000gn/T/ipykernel_2009/509316463.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m retirement_analysis = ra.RetirementAnalysis(\n\u001b[0;32m----> 2\u001b[0;31m     initial_age, retirement_age, death_age, portfolio, deferral_scenario, consumption_scenario, inflation_scenario, ssb_scenario)\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'deferral_scenario' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "retirement_analysis = ra.RetirementAnalysis(\n",
     "    initial_age=initial_age,\n",
@@ -305,13 +235,87 @@
     "    deferral_scenario=deferral,\n",
     "    consumption_scenario=consumption,\n",
     "    inflation_scenario=inflation,\n",
+    "    cpi_scenario=cpi,\n",
     "    ssb_scenario=ssb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "4c049316-41b5-41e6-8974-f56e7a288aca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retirement_analysis._step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "542fd78f-0817-4a96-a689-7f06b784357e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([19500.])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retirement_analysis.portfolio.hist_deposits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "f8e60c09-dded-487d-9853-b05c7ab3f6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.06167])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retirement_analysis.portfolio.hist_pf_returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "947e7ff5-b90f-418c-a4c4-f83c34db047f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "445370.56499999994"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retirement_analysis.portfolio.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f6e1b4-b0cc-409c-83f7-fc0376636b83",
    "metadata": {},
    "outputs": [],
    "source": []
