Add retirement_analysis tests, add ret_sim_input loader.

--- a/retirement_simulation.ipynb
+++ b/retirement_simulation.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "a6f315ed-5ef7-4b8a-a5d4-805c736cce22",
    "metadata": {},
    "outputs": [],
@@ -80,71 +80,102 @@
     "benefits_age = 67\n",
     "death_age = 100\n",
     "\n",
-    "pctile = 25\n",
+    "asset_return_pctile = 25\n",
     "\n",
     "glidepath = utils.constants.fidelity_glidepath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "2cb47e81-9e2d-4560-ac84-d72dd82e5864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_years = death_age - initial_age + 1"
+    "portfolio, deferral, consumption, inflation, cpi, ssb = utils.loaders.load_ret_sim_inputs(\n",
+    "    initial_age,\n",
+    "    retirement_age,\n",
+    "    death_age,\n",
+    "    benefits_age,\n",
+    "    asset_return_pctile,\n",
+    "    initial_cpi,\n",
+    "    initial_deferral,\n",
+    "    initial_balance,\n",
+    "    retirement_consumption,\n",
+    "    retirement_ssb,\n",
+    "    glidepath\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "726cb791-6f65-43ed-bb2e-e70e05e945be",
+   "execution_count": 27,
+   "id": "5cb6ce12-8ba8-4513-ac27-5c2d326634b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09337549999999983"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio.assets[0].static_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3545a41a-b142-4ceb-b814-6cf3aedc5a45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "equity, bond, cash = utils.loaders.load_asset_series(num_years=num_years, pctile=pctile)"
+    "retirement_analysis.in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0cdfddeb-b754-42ff-bb2c-d90d820bfea1",
+   "execution_count": 31,
+   "id": "63bceb36-9db2-4493-acaf-6bcc8a24dcb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assets = [equity, bond, cash]"
+    "eq_ret, bond_ret, cash_ret = [asset.static_value for asset in retirement_analysis.portfolio.assets]\n",
+    "inflation_rate = retirement_analysis.inflation_scenario.static_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d073e645-5eed-4c72-a6b3-afe5693490bb",
+   "execution_count": 28,
+   "id": "6c94184d-ff0a-4db4-8db8-a08118c9a737",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equity geometric mean return: 9.3375%\n",
+      "Bonds geometric mean return: 3.4093%\n",
+      "Cash geometric mean return: 2.6567%\n",
+      "Inflation geometric mean rate: 3.1000%\n"
+     ]
+    }
+   ],
    "source": [
-    "inflation, cpi = utils.loaders.load_inflation_series(num_years, initial_cpi)"
+    "print('Equity geometric mean return: {0:.4f}%'.format(100 * ))\n",
+    "print('Bonds geometric mean return: {0:.4f}%'.format(100 * portfolio.assets[1].static_value))\n",
+    "print('Cash geometric mean return: {0:.4f}%'.format(100 * portfolio.assets[2].static_value))\n",
+    "print('Inflation geometric mean rate: {0:.4f}%'.format(100 * inflation.static_value))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f2903d1d-fc7c-42d5-bdbe-abc12d5b39ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deferral, consumption, ssb = utils.loaders.load_behavioral_series(\n",
-    "    initial_deferral=initial_deferral,\n",
-    "    retirement_consumption=retirement_consumption,\n",
-    "    benefits_age=benefits_age,\n",
-    "    retirement_ssb=retirement_ssb,\n",
-    "    cpi=cpi,\n",
-    "    initial_age=initial_age,\n",
-    "    retirement_age=retirement_age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "12a13ec4-9bd2-480a-a10e-2a1664cbffb9",
    "metadata": {},
    "outputs": [
@@ -164,16 +195,6 @@
     "print('Bonds geometric mean return: {0:.4f}%'.format(100 * bond.static_value))\n",
     "print('Cash geometric mean return: {0:.4f}%'.format(100 * cash.static_value))\n",
     "print('Inflation geometric mean rate: {0:.4f}%'.format(100 * inflation.static_value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "ff3885ad-9ef8-4fa0-99c5-9cd90c026cfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "portfolio = pf.Portfolio(assets=assets, glidepath=glidepath, initial_balance=initial_balance)"
    ]
   },
   {
